--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -1,6 +1,34 @@
 .calendar {
     max-width: 600px;
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: 400;
     margin: 50px auto 0 auto;
+}
+
+.months {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.months__button {
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 32px;
+    font-weight: 300;
+    background-color: transparent;
+    border: none;
+    padding: 0 30px;
+    cursor: pointer;
+}
+
+.months__button:hover {
+    background: var(--secondary-color);
+    transition: 0.1s;
+}
+
+.months__button:active {
+    background: var(--primary-color);
 }
 
 .daysOfWeek__list {
@@ -10,13 +38,40 @@
 
 .daysOfWeek__item {
     list-style-type: none;
+    text-align: center;
+    padding: 10px;
 }
 
-.dayOfMonth__list {
+.daysOfMonth__list {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
 }
 
 .daysOfMonth__item {
+    position: relative;
     list-style-type: none;
+}
+
+.daysOfMonth__radio {
+    position: absolute;
+    width: 0;
+    height: 0;
+}
+
+.daysOfMonth__label {
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.daysOfMonth__label:hover {
+    background: var(--secondary-color);
+    transition: 0.5s;
+}
+
+.daysOfMonth__radio:checked ~ .daysOfMonth__label {
+    background: var(--primary-color);
 }
