--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:wght@300;400;500&display=swap');
+/* font-family: 'Cormorant Infant', serif; */
+
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500&display=swap');
+/* font-family: 'Fira Sans', sans-serif; */
+
+:root {
+  --light-color: #FFFCFA;
+  --dark-color: #1D1C1B;
+  --primary-color: #968981;
+  --secondary-color: #868686;
+  --footer-background: #F6F2EF;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  user-select: none;
+  -webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .App {
   width: 100%;
+  padding: 0 20px;
 }
