add GET request for all events

--- a/src/components/Times/Times.module.css
+++ b/src/components/Times/Times.module.css
@@ -1,6 +1,29 @@
 .times {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    column-gap: 20px;
     max-width: 600px;
     font-family: 'Fira Sans', sans-serif;
     font-weight: 400;
     margin: 50px auto 0 auto;
+}
+
+.times__button {
+    display: block;
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 16px;
+    color: var(--primary-color);
+    border: 2px solid var(--primary-color);
+    background: none;
+    padding: 10px 30px;
+    cursor: pointer;
+}
+
+.times__button:hover,
+.times__button:focus,
+.times__button:active {
+    color: var(--light-color);
+    background: var(--primary-color);
+    transition: 0.5s;
 }
