--- a/src/components/Times/Times.module.css
+++ b/src/components/Times/Times.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    flex-wrap: wrap;
     column-gap: 20px;
     max-width: 600px;
     font-family: 'Fira Sans', sans-serif;
