add indicator of status in Events and Calendar, add DELETE in Events

--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -60,6 +60,7 @@
 
 .daysOfMonth__label {
     display: block;
+    position: relative;
     width: 100%;
     height: 100%;
     text-align: center;
@@ -74,4 +75,30 @@
 
 .daysOfMonth__radio:checked ~ .daysOfMonth__label {
     background: var(--primary-color);
+}
+
+.event__status {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2px;
+    column-gap: 2px;
+    flex-wrap: wrap;
+    max-height: 30px;
+    position: absolute;
+    top: 5px;
+    right: 20%;
+}
+
+.event__status_free {
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background: green;
+}
+
+.event__status_ordered {
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background: blue;
 }
