--- a/src/index.css
+++ b/src/index.css
@@ -26,5 +26,13 @@
 
 .App {
   width: 100%;
-  padding: 0 20px;
+}
+
+.login_page {
+  width: 100%;
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  background: #e5e5e5;
+  padding: 20px;
 }
