--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,7 +5,7 @@
     font-family: 'Roboto', sans-serif;
     color: #ffffff;
     background: #2D3748;
-    padding: 30px 120px;
+    padding: 30px 40px 30px 70px;
 }
 
 .navbar__logo {
