--- a/src/components/Modals/Modal.module.css
+++ b/src/components/Modals/Modal.module.css
@@ -106,7 +106,7 @@
     position: relative;
     display: grid;
     grid-template-columns: auto auto;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     gap: 20px;
 }
