--- a/src/components/Times/Times.module.css
+++ b/src/components/Times/Times.module.css
@@ -14,8 +14,9 @@
     display: block;
     font-family: 'Fira Sans', sans-serif;
     font-size: 16px;
-    color: var(--primary-color);
-    border: 2px solid var(--primary-color);
+    color: #2C5282;
+    border: 2px solid #2C5282;
+    border-radius: 5px;
     background: none;
     padding: 10px 30px;
     cursor: pointer;
@@ -24,7 +25,6 @@
 .times__button:hover,
 .times__button:focus,
 .times__button:active {
-    color: var(--light-color);
-    background: var(--primary-color);
+    background: rgba(66, 153, 225, 0.5);
     transition: 0.5s;
 }
